--- a/src/app.less
+++ b/src/app.less
@@ -1,4 +1,10 @@
-html.light {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
   background: var(--van-gray-1);
   font-size: var(--van-font-size-lg);
   color-scheme: light;
@@ -9,8 +15,13 @@ html.dark {
   color-scheme: dark;
 }
 
-// 必须有 #app 的选择器 postcss-mobile-forever 才能生效
 #app {
-  margin: 0 auto;
-  font-weight: normal;
+  height: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
